--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,25 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Lato, 'Courier New', Courier, monospace;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.7;
+    color: #777777;
+    padding: 30px;
+}
+
+.header{
+    height: 95vh;
+    background-image:  linear-gradient(to right bottom, #55c57acb,#28b485d3 ), url('../img/hero.jpg');
+    background-position: top;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+}
