--- a/css/style.css
+++ b/css/style.css
@@ -7,61 +7,60 @@ Dark green: #28b485
 
 */
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body{
-    font-family: Lato, 'Courier New', Courier, monospace;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.7;
-    color: #777777;
-    padding: 30px;
+  font-family: Lato, 'Courier New', Courier, monospace;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777777;
+  padding: 30px;
 }
 
 .header{
-    position: relative;
-    height: 95vh;
-    background-image:  linear-gradient(to right bottom, #55c57acb,#28b485d3 ), url('../img/hero.jpg');
-    background-position: top;
-    background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+  position: relative;
+  height: 95vh;
+  background-image:  linear-gradient(to right bottom, #55c57acb,#28b485d3 ), url('../img/hero.jpg');
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 }
 
 .logo-container{
-    position: absolute;
-    top:30px;
-    left: 30px;
+  position: absolute;
+  top:30px;
+  left: 30px;
 }
 
 .logo-image{
-    width: 60px;
+  width: 60px;
 }
-
 .title-container{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
 }
 
 .main-title{
-    color: #ffffff;
-    backface-visibility: hidden;
-    margin-bottom: 30px;
+  color: #ffffff;
+  backface-visibility: hidden;
+  margin-bottom: 30px;
 }
 
 .title-big{
-    text-transform: uppercase;
-    display: block;
-    font-size: 50px;
-    font-weight: 400;
-    letter-spacing: 19px;
-    animation-name: slideToRight;
-    animation-duration: 1s;
+  text-transform: uppercase;
+  display: block;
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: 19px;
+  animation-name: slideToRight;
+  animation-duration: 1s;
     animation-timing-function: ease-out;
 }
 
@@ -76,22 +75,45 @@ body{
 }
 
 
-.btn:link,
+.btn, .btn:link,
 .btn:visited{
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 700;
-    text-decoration: none;
-    border-radius: 100px;
-    padding: 0 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s;
+  display: inline-block;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  border-radius: 100px;
+  padding: 0 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s;
+ 
 }
+
+
 
 .btn:hover{
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
     transform: translateY(-3px);
+}
+
+.btn::after{
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: #ffffff;
+  border-radius: 100px;
+  transition: all 0.3s ;
+}
+
+.btn:hover::after{
+  transform: scaleX(1.5) scaleY(1.8);
+  opacity: 0;
 }
 
 .btn:active{
@@ -104,6 +126,10 @@ body{
     color: #777;
 }
 
+.btn-animated{
+  animation: slideUp 1s ease-out 0.5s;
+  animation-fill-mode: backwards;
+}
 
 @keyframes slideToRight {
  0%{
@@ -118,13 +144,25 @@ body{
 }
 
 @keyframes slideToLeft {
-    0%{
-       transform: translateX(100px);
-    }
-    80%{
-        transform: translateX(-5px);
-     }
-    100%{
-       transform: translateX(0);
-    }
+  0%{
+     transform: translateX(100px);
+  }
+  80%{
+      transform: translateX(-5px);
    }
+  100%{
+     transform: translateX(0);
+  }
+}
+
+@keyframes slideUp {
+    0%{
+       transform: translateY(50px);
+       opacity: 0;
+    }
+   
+    100%{
+       transform: translateY(0);
+       opacity: 1;
+    }
+  }
