--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,71 @@
-/*
-COLORS:
+@keyframes slideToRight {
+  0% {
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(0.5rem); }
+  100% {
+    transform: translateX(0); } }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@keyframes slideToLeft {
+  0% {
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-0.5rem); }
+  100% {
+    transform: translateX(0); } }
 
-*/
-*, 
+@keyframes slideUp {
+  0% {
+    transform: translateY(5rem);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+
+*,
 *::before,
-*::after
-{
+*::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
-html{
-  font-size: 62.5%;
-}
+html {
+  font-size: 62.5%; }
 
-body{
+body {
+  box-sizing: border-box; }
+
+body {
   font-family: Lato, 'Courier New', Courier, monospace;
   font-weight: 400;
   line-height: 1.7;
   color: #777777;
   padding: 30px;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-.header{
-  position: relative;
-  height: 95vh;
-  background-image:  linear-gradient(to right bottom, #55c57acb,#28b485d3 ), url('../img/hero.jpg');
-  background-position: top;
-  background-size: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
-}
-
-.header__logo-container{
-  position: absolute;
-  top:3rem;
-  left: 3rem;
-}
-
-.header__logo-image{
-  width: 6rem;
-}
-.header__title-container{
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  text-align: center;
-}
-
-.main-title{
+.main-title {
   color: #ffffff;
   backface-visibility: hidden;
-  margin-bottom:3rem;
-}
-
-.main-title--main{
-  text-transform: uppercase;
-  display: block;
-  font-size: 5rem;
-  font-weight: 400;
-  letter-spacing: 1.9rem;
-  animation-name: slideToRight;
-  animation-duration: 1s;
-    animation-timing-function: ease-out;
-}
-
-.main-title--sub{
+  margin-bottom: 3rem; }
+  .main-title--main {
+    text-transform: uppercase;
+    display: block;
+    font-size: 5rem;
+    font-weight: 400;
+    letter-spacing: 1.9rem;
+    animation-name: slideToRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out; }
+  .main-title--sub {
     text-transform: uppercase;
     display: block;
     font-size: 1.8rem;
     font-weight: 700;
-    letter-spacing:0.87rem;
+    letter-spacing: 0.87rem;
     animation-name: slideToLeft;
-    animation-duration: 1s;
-}
+    animation-duration: 1s; }
 
-.btn, .btn:link,
-.btn:visited{
+.btn:link, .btn:visited {
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -91,16 +74,17 @@ body{
   text-decoration: none;
   border-radius: 10rem;
   padding: 0 2rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
-  transition: all 0.2s;
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.4);
+  transition: all 0.2s; }
 
-.btn:hover{
-    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
-    transform: translateY(-0.3rem);
-}
+.btn:hover {
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.3rem); }
+  .btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.8);
+    opacity: 0; }
 
-.btn::after{
+.btn::after {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -111,61 +95,36 @@ body{
   z-index: -1;
   background-color: #ffffff;
   border-radius: 10rem;
-  transition: all 0.3s ;
-}
+  transition: all 0.3s; }
 
-.btn:hover::after{
-  transform: scaleX(1.5) scaleY(1.8);
-  opacity: 0;
-}
+.btn:active {
+  box-shadow: 0 0.7rem 1rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.2rem); }
 
-.btn:active{
-    box-shadow: 0 0.7rem 1rem rgba(0, 0, 0, 0.3);
-    transform: translateY(-0.2rem);
-}
+.btn--white {
+  background-color: #ffffff;
+  color: #777777; }
 
-.btn--white{
-    background-color: #ffffff;
-    color: #777;
-}
-
-.btn--animated{
+.btn--animated {
   animation: slideUp 1s ease-out 0.5s;
-  animation-fill-mode: backwards;
-}
+  animation-fill-mode: backwards; }
 
-@keyframes slideToRight {
- 0%{
-    transform: translateX(-10rem);
- }
- 80%{
-    transform: translateX(0.5rem);
- }
- 100%{
-    transform: translateX(0);
- }
-}
-
-@keyframes slideToLeft {
-  0%{
-     transform: translateX(10rem);
-  }
-  80%{
-      transform: translateX(-0.5rem);
-   }
-  100%{
-     transform: translateX(0);
-  }
-}
-
-@keyframes slideUp {
-    0%{
-       transform: translateY(5rem);
-       opacity: 0;
-    }
-   
-    100%{
-       transform: translateY(0);
-       opacity: 1;
-    }
-  }
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, #55c57cba, #28b485cb), url("../img/hero.jpg");
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%); }
+  .header__logo-container {
+    position: absolute;
+    top: 3rem;
+    left: 3rem; }
+  .header__logo-image {
+    width: 6rem; }
+  .header__title-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
