--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,13 @@
+//Colors
 $black: #000000;
 $gray-1: #777777;
-$green-light: #7ed56f;
-$green-medium: #55c57cba;
-$green-dark: #28b485cb;
+$gray-light-1: #f8f8f8;
+$primary-light: #7ed56f;
+$primary: #55c57cba;
+$primary-dark: #28b485cb;
 $white: #ffffff;
+
+//Grid
+$max-width: 114rem;
+$gutter-horizontal: 5rem;
+$gutter-vertical: 5rem;
