--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,35 +1,50 @@
-body{
+body {
   font-family: Lato, 'Courier New', Courier, monospace;
   font-weight: 400;
   line-height: 1.7;
   color: $gray-1;
   padding: 30px;
-  box-sizing: border-box;    
+  box-sizing: border-box;
 }
 
-.main-title{
-    color: $white;
-    backface-visibility: hidden;
-    margin-bottom:3rem;
-  
-    &--main{
-      text-transform: uppercase;
-      display: block;
-      font-size: 5rem;
-      font-weight: 400;
-      letter-spacing: 1.9rem;
-      animation-name: slideToRight;
-      animation-duration: 1s;
-        animation-timing-function: ease-out;
-    }
-    
-    &--sub{
-        text-transform: uppercase;
-        display: block;
-        font-size: 1.8rem;
-        font-weight: 700;
-        letter-spacing:0.87rem;
-        animation-name: slideToLeft;
-        animation-duration: 1s;
-    }
+.main-title {
+  color: $white;
+  backface-visibility: hidden;
+  margin-bottom: 3rem;
+
+  &--main {
+    text-transform: uppercase;
+    display: block;
+    font-size: 5rem;
+    font-weight: 400;
+    letter-spacing: 1.9rem;
+    animation-name: slideToRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
   }
+
+  &--sub {
+    text-transform: uppercase;
+    display: block;
+    font-size: 1.8rem;
+    font-weight: 700;
+    letter-spacing: 0.87rem;
+    animation-name: slideToLeft;
+    animation-duration: 1s;
+  }
+}
+
+.secondary-title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  color: transparent;
+  background-image: linear-gradient(to right, $primary-light, $primary-dark);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: 0.5s ease;
+  &:hover {
+    transform: skewX(10deg) skewY(5deg);
+  }
+}
