--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,24 +1,25 @@
-.header{
-    position: relative;
-    height: 95vh;
-    background-image:  linear-gradient(to right bottom, $green-medium,$green-dark), url('../img/hero.jpg');
-    background-position: top;
-    background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
-  
-    &__logo-container{
-      position: absolute;
-      top:3rem;
-      left: 3rem;
-    }
-    &__logo-image{
-      width: 6rem;
-    }
-    &__title-container{
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      text-align: center;
-    }
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, $primary, $primary-dark),
+    url('../img/hero.jpg');
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+
+  &__logo-container {
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
   }
+  &__logo-image {
+    width: 6rem;
+  }
+  &__title-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
