--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,28 +1,17 @@
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/animations';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "component/button";
+@import 'component/button';
+@import 'component/image-collage';
+@import 'component/feature-box';
 
-@import "layout/grid";
-@import "layout/header";
+@import 'layout/grid';
+@import 'layout/header';
 
-@import "pages/home";
-
-
-
- 
-
-
-
-
-
-
-
-
-
+@import 'pages/home';
