--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,11 +3,16 @@ $black: #000000;
 $gray-1: #777777;
 $gray-light-1: #f8f8f8;
 $primary-light: #7ed56f;
-$primary: #55c57cba;
-$primary-dark: #28b485cb;
+$primary: #55c57c;
+$primary-dark: #28b485;
 $white: #ffffff;
 
 //Grid
 $max-width: 114rem;
 $gutter-horizontal: 5rem;
 $gutter-vertical: 5rem;
+
+//Typography
+$margin-small: 1.25rem;
+$margin-medium: 3.5rem;
+$margin-big: 8rem;
