--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   height: 95vh;
-  background-image: linear-gradient(to right bottom, $primary, $primary-dark),
+  background-image: linear-gradient(to right bottom, rgba($primary, 0.8), rgba($primary-dark, 0.8)),
     url('../img/hero.jpg');
   background-position: top;
   background-size: cover;
