--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,12 @@
-.main-section {
-  padding-top: 22vh;
-  background-color: $gray-light-1;
+.section-about {
   margin-top: -20vh;
+  padding: 25rem 0;
+  background-color: $gray-light-1;
+}
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba($primary, 0.8), rgba($primary-dark, 0.8)),
+    url('../img/nat-4.jpg');
+  background-position: top;
+  background-size: cover;
 }
