create a two side card that rotates on hover

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,9 +4,18 @@
   background-color: $gray-light-1;
 }
 .section-features {
+  margin-top: -10rem;
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba($primary, 0.8), rgba($primary-dark, 0.8)),
     url('../img/nat-4.jpg');
   background-position: top;
   background-size: cover;
+  transform: skewY(-7deg);
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+.section-tours {
+  margin-top: 10rem;
+  padding: 10rem 0 20rem 0;
 }
