--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,32 @@ body {
   box-shadow: 0 0.7rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(-0.2rem); }
 
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  -webkit-perspective: 150rem;
+  position: relative;
+  height: 30rem;
+  width: 20rem;
+  height: 50rem; }
+  .card__side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50rem;
+    transition: all 0.8s ease;
+    backface-visibility: hidden; }
+    .card__side--front {
+      background-color: orange; }
+    .card__side--back {
+      background-color: yellow;
+      transform: rotateY(-180deg); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+
 .image-collage {
   position: relative; }
   .image-collage__image {
@@ -274,7 +300,15 @@ body {
   background-color: #f8f8f8; }
 
 .section-features {
+  margin-top: -10rem;
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 124, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
   background-position: top;
-  background-size: cover; }
+  background-size: cover;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
+
+.section-tours {
+  margin-top: 10rem;
+  padding: 10rem 0 20rem 0; }
