--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base/utilities';
 
 @import 'component/button';
+@import 'component/card';
 @import 'component/image-collage';
 @import 'component/feature-box';
 
