--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,16 @@
 //Colors
 $black: #000000;
 $gray-1: #777777;
+$gray-2: #eeeeee;
 $gray-light-1: #f8f8f8;
+
 $primary-light: #7ed56f;
 $primary: #55c57c;
 $primary-dark: #28b485;
+$secondary-light: #ffb900;
+$secondary-dark: #ff7730;
+$tertiary-light: #2998ff;
+$tertiary-dark: #5643fa;
 $white: #ffffff;
 
 //Grid
