--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,6 +11,16 @@
   margin-bottom: 7rem;
 }
 
+.margin-top-small {
+  margin-top: 0.8rem;
+}
+.margin-top-medium {
+  margin-top: 3rem;
+}
+.margin-top-large {
+  margin-top: 7rem;
+}
+
 .padding-horizontal-small {
   padding-left: 0.8rem;
   padding-right: 0.8rem;
