--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,6 +16,10 @@
   }
 }
 .section-tours {
-  margin-top: 10rem;
   padding: 10rem 0 20rem 0;
+}
+
+.section-testimony {
+  padding: 10rem 0 20rem 0;
+  position: relative;
 }
