--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,21 @@ body {
   padding-left: 7rem;
   padding-right: 7rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  background-blend-mode: soft-light;
+  opacity: 0.5; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
 .btn:link, .btn:visited {
   display: inline-block;
   position: relative;
@@ -214,7 +229,9 @@ body {
     height: 50rem;
     transition: all 0.8s ease;
     backface-visibility: hidden;
-    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.15); }
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.15);
+    border-radius: 3px;
+    overflow: hidden; }
     .card__side--front {
       background-color: #ffffff; }
     .card__side--back {
@@ -286,8 +303,6 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  .card__discover-all-container {
-    text-align: center; }
 
 .image-collage {
   position: relative; }
@@ -329,6 +344,54 @@ body {
     -webkit-background-clip: text; }
   .feature-box:hover {
     transform: translateY(-1rem) scale(1.05); }
+
+.testimony {
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 4rem 3rem;
+  padding-left: 4rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  transform: skewX(-12deg); }
+  .testimony__figure {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    position: relative;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-1rem) skewX(12deg);
+    overflow: hidden; }
+  .testimony__image {
+    height: 100%;
+    transform: translateX(-3.5rem) scale(1.1);
+    transition: 0.8s ease; }
+  .testimony__text {
+    transform: skewX(12deg); }
+  .testimony__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    opacity: 0;
+    transform: translate(-50%, 100%);
+    font-size: 1.6rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    z-index: 10;
+    transition: 0.8s ease;
+    backface-visibility: hidden; }
+  .testimony:hover .testimony__caption {
+    transform: translate(-50%, -50%);
+    opacity: 1; }
+  .testimony:hover .testimony__image {
+    backface-visibility: hidden;
+    filter: blur(2px) brightness(0.8);
+    transform: translateX(-3.5rem) scale(1); }
+  .testimony:not(:last-child) {
+    margin-bottom: 3rem; }
 
 .row {
   max-width: 114rem;
@@ -392,5 +455,8 @@ body {
     transform: skewY(7deg); }
 
 .section-tours {
-  margin-top: 10rem;
   padding: 10rem 0 20rem 0; }
+
+.section-testimony {
+  padding: 10rem 0 20rem 0;
+  position: relative; }
