--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,12 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'component/bg-video';
 @import 'component/button';
 @import 'component/card';
 @import 'component/image-collage';
 @import 'component/feature-box';
+@import 'component/testimony';
 
 @import 'layout/grid';
 @import 'layout/header';
